# gears3d

./: .dir-locals.el  CONTRIBUTING  dlfcn_lib.c  egl.c  egl.h  g_math.c  g_math.h  gen_spirv.py  gif.c  gif.h  gl.c  gl.h  gl21_compat.c  gl32_core.c  gl_shader.c  gles20.c  gles30.c  glfn.c  glfn.h  glx.c  glx.h  load_lib.h  main.c  main.h  meson.build  options.c  output.c  sdl_fw.c  sdl_fw.h  sim.c  sim.h  vert_buf.c  vert_buf.h  vk-spirv.h  vk10.c  winsys_drm.c  winsys_drm.h  winsys_sdl.c  winsys_wl.c  winsys_wl.h  (+3 more)
tests/: math.c
